[gd_scene load_steps=9 format=3 uid="uid://yybsrgi3s83l"]

[ext_resource type="Script" path="res://main/dungeons/room.gd" id="1_sbqls"]
[ext_resource type="Texture2D" uid="uid://b7x8tg3gcmj73" path="res://assets/Dungeon_Tileset.png" id="2_adjar"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ahsjq"]
texture = ExtResource("2_adjar")
1:0/0 = 0
0:1/0 = 0
0:0/0 = 0
5:1/0 = 0
5:0/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
3:2/0 = 0

[sub_resource type="TileSet" id="TileSet_o15xo"]
sources/0 = SubResource("TileSetAtlasSource_ahsjq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fnyp"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4e4h8"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1704"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5e5o"]
size = Vector2(16, 32)

[node name="Room" type="Node2D"]
script = ExtResource("1_sbqls")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_o15xo")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 65536, 0, 1, 4, 65536, 0, 131072, 0, 1, 196608, 0, 1, 65540, 196608, 2, 131076, 196608, 2, 196612, 196608, 2, 262145, 196608, 2, 262146, 196608, 2, 262147, 196608, 2, 262144, 0, 1, 262148, 196608, 2, 65537, 196608, 2, 131073, 196608, 2, 196609, 196608, 2, 196610, 196608, 2, 196611, 196608, 2, 131075, 196608, 2, 65539, 196608, 2, 65538, 196608, 2, 131074, 196608, 2, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 65536, 0, 19, 327680, 0, 65555, 327680, 0, 131091, 327680, 0, 196627, 327680, 0, 262163, 327680, 0, 327699, 327680, 0, 393235, 327680, 0, 458771, 327680, 0, 524307, 327680, 0, 589843, 327680, 4, 589825, 65536, 4, 589826, 65536, 4, 589827, 65536, 4, 589828, 65536, 4, 589829, 65536, 4, 589830, 65536, 4, 589831, 65536, 4, 589832, 65536, 4, 589833, 65536, 4, 589834, 65536, 4, 589835, 65536, 4, 589836, 65536, 4, 589837, 65536, 4, 589838, 65536, 4, 589839, 65536, 4, 589840, 65536, 4, 589841, 65536, 4, 589842, 65536, 4, 524288, 0, 1, 458752, 0, 1, 393216, 0, 1, 327680, 0, 1, 589824, 0, 4, 327681, 196608, 2, 393217, 196608, 2, 458753, 196608, 2, 524289, 196608, 2, 327682, 196608, 2, 393218, 196608, 2, 458754, 196608, 2, 524290, 196608, 2, 327683, 196608, 2, 393219, 196608, 2, 458755, 196608, 2, 524291, 196608, 2, 327684, 196608, 2, 393220, 196608, 2, 458756, 196608, 2, 524292, 196608, 2, 65541, 196608, 2, 131077, 196608, 2, 196613, 196608, 2, 262149, 196608, 2, 327685, 196608, 2, 393221, 196608, 2, 458757, 196608, 2, 524293, 196608, 2, 65542, 196608, 2, 131078, 196608, 2, 196614, 196608, 2, 262150, 196608, 2, 327686, 196608, 2, 393222, 196608, 2, 458758, 196608, 2, 524294, 196608, 2, 65543, 196608, 2, 131079, 196608, 2, 196615, 196608, 2, 262151, 196608, 2, 327687, 196608, 2, 393223, 196608, 2, 458759, 196608, 2, 524295, 196608, 2, 65544, 196608, 2, 131080, 196608, 2, 196616, 196608, 2, 262152, 196608, 2, 327688, 196608, 2, 393224, 196608, 2, 458760, 196608, 2, 524296, 196608, 2, 65545, 196608, 2, 131081, 196608, 2, 196617, 196608, 2, 262153, 196608, 2, 327689, 196608, 2, 393225, 196608, 2, 458761, 196608, 2, 524297, 196608, 2, 65546, 196608, 2, 131082, 196608, 2, 196618, 196608, 2, 262154, 196608, 2, 327690, 196608, 2, 393226, 196608, 2, 458762, 196608, 2, 524298, 196608, 2, 65547, 196608, 2, 131083, 196608, 2, 196619, 196608, 2, 262155, 196608, 2, 327691, 196608, 2, 393227, 196608, 2, 458763, 196608, 2, 524299, 196608, 2, 65548, 196608, 2, 131084, 196608, 2, 196620, 196608, 2, 262156, 196608, 2, 327692, 196608, 2, 393228, 196608, 2, 458764, 196608, 2, 524300, 196608, 2, 65549, 196608, 2, 131085, 196608, 2, 196621, 196608, 2, 262157, 196608, 2, 327693, 196608, 2, 393229, 196608, 2, 458765, 196608, 2, 524301, 196608, 2, 65550, 196608, 2, 131086, 196608, 2, 196622, 196608, 2, 262158, 196608, 2, 327694, 196608, 2, 393230, 196608, 2, 458766, 196608, 2, 524302, 196608, 2, 65551, 196608, 2, 131087, 196608, 2, 196623, 196608, 2, 262159, 196608, 2, 327695, 196608, 2, 393231, 196608, 2, 458767, 196608, 2, 524303, 196608, 2, 65552, 196608, 2, 131088, 196608, 2, 196624, 196608, 2, 262160, 196608, 2, 327696, 196608, 2, 393232, 196608, 2, 458768, 196608, 2, 524304, 196608, 2, 65553, 196608, 2, 131089, 196608, 2, 196625, 196608, 2, 262161, 196608, 2, 327697, 196608, 2, 393233, 196608, 2, 458769, 196608, 2, 524305, 196608, 2, 65554, 196608, 2, 131090, 196608, 2, 196626, 196608, 2, 262162, 196608, 2, 327698, 196608, 2, 393234, 196608, 2, 458770, 196608, 2, 524306, 196608, 2)

[node name="ID" type="Label" parent="."]
visible = false
offset_left = 144.0
offset_top = 64.0
offset_right = 184.0
offset_bottom = 87.0

[node name="TopDoor" type="Area2D" parent="."]
position = Vector2(144, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopDoor"]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_0fnyp")

[node name="BottomDoor" type="Area2D" parent="."]
position = Vector2(144, 144)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomDoor"]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_4e4h8")

[node name="LeftDoor" type="Area2D" parent="."]
position = Vector2(0, 64)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDoor"]
position = Vector2(8, 16)
shape = SubResource("RectangleShape2D_v1704")

[node name="RightDoor" type="Area2D" parent="."]
position = Vector2(304, 64)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDoor"]
position = Vector2(8, 16)
shape = SubResource("RectangleShape2D_r5e5o")

[node name="CenterSpawnPoint" type="Marker2D" parent="."]
position = Vector2(160, 80)

[node name="TopSpawnPoint" type="Marker2D" parent="."]
position = Vector2(160, 25)

[node name="BottomSpawnPoint" type="Marker2D" parent="."]
position = Vector2(160, 135)

[node name="LeftSpawnPoint" type="Marker2D" parent="."]
position = Vector2(25, 80)

[node name="RightSpawnPoint" type="Marker2D" parent="."]
position = Vector2(295, 80)

[connection signal="body_entered" from="TopDoor" to="." method="_on_top_door_body_entered"]
[connection signal="body_entered" from="BottomDoor" to="." method="_on_bottom_door_body_entered"]
[connection signal="body_entered" from="LeftDoor" to="." method="_on_left_door_body_entered"]
[connection signal="body_entered" from="RightDoor" to="." method="_on_right_door_body_entered"]
